# ast-grep-mcp

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-dev.yml  push-prod-image.yml  test.yml
ast-grep-mcp-rs/: Cargo.toml  README.md
ast-grep-mcp-rs/src/: command.rs  config.rs  format.rs  lib.rs  main.rs  server.rs
ast-grep-mcp-rs/tests/: integration_tests.rs  unit_tests.rs
ast-grep-mcp-rs/tests/fixtures/: example.py
mock_global_rules/: example-global-rule.yml
tests/: test_integration.py  test_unit.py
