[package]
name = "ast-grep-mcp"
version = "0.1.0"
edition = "2021"
description = "An MCP server providing structural code search via ast-grep"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ast-grep-mcp-server"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.16.0", features = ["server", "transport-io", "transport-streamable-http-server", "schemars"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "0.8"
ctrlc = "3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
assert_cmd = "2"
